--- a/PogotowieCom/Views/Appointment/ChoosePlace2.cshtml
+++ b/PogotowieCom/Views/Appointment/ChoosePlace2.cshtml
@@ -14,24 +14,28 @@
         </div>
     </div>
 
-    <div>@DateTime.Now</div>
-
     <div class="row">
         <div class="col-lg-12">
-          
-            <form id="SelectPlace" asp-action="ShowPlaces" asp-controller="Appointment">
+
+            <form id="SelectPlace" asp-action="ShowPlaces" asp-controller="Appointment"
+ data-ajax="true"
+      data-ajax-method="Post"
+      data-ajax-mode="replace"
+      data-ajax-update="#SelectResult"                 
+      data-ajax-success="Success"
+      data-ajax-failure="Failure">
                 <div class="row">
                     <div class="col-lg-4 form-group ">
                         <div><span asp-validation-for="Country" class="text-danger"></span></div>
                         <lable>Kraj</lable>
-                        <input name="Country" class="form-control">
+                        <input asp-for="Country" class="form-control">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 form-group ">
                         <div><span asp-validation-for="City" class="text-danger"></span></div>
                         <lable>Miasto</lable>
-                        <input name="City" class="form-control">
+                        <input asp-for="City" class="form-control">
                     </div>
                 </div><div class="row">
                     <div class="col-lg-4 form-group ">
@@ -78,7 +82,9 @@
 </div>
 
 
+<div id="divalert">
 
+</div>
 
 
 
@@ -92,40 +98,17 @@
 
 
 
-<script type="text/javascript">
+    <script type="text/javascript">
 
-    alert("Worsk");
+        function Success() {
+            $("#divalert").text = "Yes";
+        }
+        function Failure() {
+            $("#divalert").text = "No";
+
+        }
+
    
+    </script>
+        }
 
-           var frm = $('#SelectPlace');
-
-           $("#SelectPlace").validate({
-               submitHandler: function (form) { // fires only when form is valid
-                   // your ajax here
-
-                   alert("Works");
-                   $.ajax({
-                       type: frm.attr('method'),
-                       url: frm.attr('action'),
-                       data: frm.serialize(),
-                       success: function (data) {
-                           //$.validator.unobtrusive.parse("#SelectPlace");
-                           $("#SelectResult").html(data);
-                           alert("Submit");
-                       },
-                       error: function (data) {
-                           console.log('An error occurred.');
-                           console.log(data);
-                           alert("Error");
-                       },
-                   });
-                   return false;
-               }
-    });
-
-    alert("Worsk2");
-        </script>
-
-
-} 
-                    
