--- a/PogotowieCom/Views/Home/HomePage.cshtml
+++ b/PogotowieCom/Views/Home/HomePage.cshtml
@@ -72,6 +72,12 @@
             });
 
         });
+
+        function SubmitFunction() {
+            alert("Div clicked");
+        }
+
+
     });
 </script>
 
