--- a/PogotowieCom/Views/Home/UsersPanel.cshtml
+++ b/PogotowieCom/Views/Home/UsersPanel.cshtml
@@ -1,8 +1,16 @@
-﻿
+﻿@model UsersAccountViewModel
 @{
     ViewData["Title"] = "UsersPanel";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>UsersPanel</h2>
+<h2>Moje konto</h2>
+
+@if(Model.NotificationList.Count>0)
+{
+    foreach (var item in Model.NotificationList)
+    {
+        <p>@item.NotificationText</p>
+    }
+}
 
