--- a/PogotowieCom/Views/Shared/_Layout.cshtml
+++ b/PogotowieCom/Views/Shared/_Layout.cshtml
@@ -9,11 +9,11 @@
 
     <script src="~/lib/jquery-validate/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
+    
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 
-
+    <script src="~/JavaScript/Notifications.js"></script>
     <script src="~/datepicker-pl.js"></script>
 
     <style>
@@ -65,6 +65,23 @@
             </div>
         </div>
     </nav>
+
+    @if (SignInManager.IsSignedIn(User))
+    {
+
+        var user = UserManager.GetUserAsync(User);
+
+        
+
+        <div class="row">
+            <div class="col col-lg-12">
+                @await Component.InvokeAsync(nameof(NotificationsSummary),user.Id )
+            </div>
+        </div>
+
+
+    }
+
 
 
 
