--- a/PogotowieCom/Views/_ViewImports.cshtml
+++ b/PogotowieCom/Views/_ViewImports.cshtml
@@ -1,5 +1,9 @@
 ﻿@using PogotowieCom.Models
 @using PogotowieCom.Compontnts
 @using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
+
 @addTagHelper Users.Infrastructure.*,Users;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
