--- a/PogotowieCom/Views/Home/FindSpecialist.cshtml
+++ b/PogotowieCom/Views/Home/FindSpecialist.cshtml
@@ -2,11 +2,11 @@
 
 @{Layout = null; }
 
+
+
+@if(Model.Users!=null&&Model.Users.Count>0)
+{
 <div class="col-lg-12">
-
-</div>
-
-
     <table class="table-bordered">
         <thead><tr><th>Nazwisko </th><th>Imię </th><th>Rezerwuj wizytę </th></tr></thead>
 
@@ -28,11 +28,18 @@
                         <button class="btn btn-primary" type="submit">Wizyty</button>
                     </form>
                 </td>
-               
-</tr>
+
+            </tr>
         }
 
     </table>
+    </div>
+}
+
+
+
+
+
 
 
 
