--- a/PogotowieCom/Views/Home/HomePage.cshtml
+++ b/PogotowieCom/Views/Home/HomePage.cshtml
@@ -9,11 +9,27 @@
 <div>@DateTime.Now</div>
 
 <div class="container">
+    <div class="row">
+        <div class="col-lg-3 ">
+
+        </div>
+        <div class="col-lg-3 ">
+
+        </div>
+        <div class="col-lg-3 ">
+
+        </div>
+        <div class="col-lg-3 ">
+            <a asp-action="AdvancedSearch" class="btn btn-warning">Szukanie Zaawansowane</a>
+        </div>
+
+    </div>
     <form id="SelectDoctor" asp-controller="Home" asp-action="FindSpecialist">
         <div class="row">
             <div class="col-lg-4 form-group ">
                 <lable class="pre-scrollable ">Kraj</lable>
                 <input asp-for="Country" class="form-control">
+               
             </div>
         </div>
         <div class="row">
@@ -29,6 +45,22 @@
             </div>
         </div>
         <div class="row">
+            <h3>Powiedz co Ci dolega</h3>
+
+            @for (int i = 0; i < 5; i++)
+            {
+                <div class="col-lg-12 form-group ">
+                    <label>Objaw @(i + 1)</label>
+
+                    <input name="Ailments[@i].Text" class="form-control">
+                </div>
+            }
+
+
+
+        </div>
+       
+        <div class="row">
             <div class="col-lg-2">
                 <button class="btn btn-warning" type="submit">Szukaj</button>
             </div>
@@ -36,13 +68,45 @@
     </form>
 
 
+
     <div class="row" id="FindSpecialist">
-      
+
     </div>
 
+    @*<form asp-action="FindAilment" asp-controller="Home">
+        <div class="row">
+            <h3>Powiedz co Ci dolega</h3>
 
+            @for (int i = 0; i < 5; i++)
+            {
+                <div class="col-lg-12 form-group ">
+                    <label>Objaw @(i + 1)</label>
+
+                 <input name="[@i].Text" class="form-control">
+                </div>
+            }
+
+
+         
+        </div>
+        <div class="row">
+            <div class="col-lg-2">
+                <button class="btn btn-primary" type="submit">Szukaj</button>
+            </div>
+        </div>
+    </form>
+
+    <div class="row" id="ShowSpe">
+
+    </div>*@
 
 </div>
+    
+        
+    
+
+
+
 
 
 
@@ -91,112 +155,3 @@
 
 
 
-@*<div>
-    <h2 class="text-center">Wybierz co cię boli</h2>
-    <form method="post" asp-action="ChooseBodyPart" asp-controller="Home">
-        <div class="container">
-            <div class="row">
-               <div class="col-lg-12" >
-                   <br />
-                   <br />
-               </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-2 form-group text-center">
-                    <lable  class="btn btn-success">Głowa</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Głowa">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Szyja</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Szyja">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Klatka</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Klatka">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Brzuch</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Brzuch">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Nogi</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Nogi">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Ręce</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Ręce">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <button  class="btn btn-info"type="submit">Wybierz</button>
-                </div>
-            </div>
-            
-        </div>
-
-</form>
-
-
-</div>
-<div><hr /></div>
-<div class="container">
-
-
-    <div class=" row">
-        <form method="post" asp-action="ChooseBodyPart" asp-controller="Home">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <br />
-                    <br />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-2 form-group text-center">
-                    <lable class="btn btn-success">Głowa</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Głowa">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Szyja</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Szyja">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Klatka</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Klatka">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Brzuch</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Brzuch">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Nogi</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Nogi">
-                </div>
-                <div class="col-lg-2 text-center">
-                    <lable type="submit" class="btn btn-success">Ręce</lable>
-                    <input type="checkbox" name="BodyParts" class="form-control" value="Ręce">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <button class="btn btn-info" type="submit">Wybierz</button>
-                </div>
-            </div>
-
-
-
-        </form>
-    </div>
-    <div class="row">
-        <form method="post" asp-controller="Home" asp-action="FindBodyPart">
-            <div class="col-lg-12  form-group">
-                <lable type="submit" class="btn btn-primary ">Boląca część ciała/części</lable>
-                <input name="FindBodyPart" class="form-control">
-                <button type="submit" class="btn btn-info">Wybierz</button>
-            </div>
-            <
-        </form>
-    </div>
-
-</div>*@
