--- a/PogotowieCom/Views/Comment/DoctorRank.cshtml
+++ b/PogotowieCom/Views/Comment/DoctorRank.cshtml
@@ -14,6 +14,7 @@
             <thead>
                 <tr>
                     <th>Numer w Rankingu</th>
+                    <th>Punkty</th>
                     <th>Imię</th>
                     <th>Nazwisko</th>
                     <th>Specjalizacja</th>
@@ -26,15 +27,33 @@
             <tbody>
                 @foreach (var doctorRank in Model)
                 {
-                    <tr>
-                        <td>@doctorRank.RankNumber</td>
-                        <td>@doctorRank.Name</td>
-                        <td>@doctorRank.Surname</td>
-                        <td>@doctorRank.specializations.First()</td>
-                        <td>@doctorRank.places.First()</td>
-                        <td>@doctorRank.comments.First()</td>
-                        <td>@doctorRank.appointments</td>
-                    </tr>
+                <tr>
+                    <td>@(Model.IndexOf(doctorRank) + 1)</td>
+                    <td>@doctorRank.Points</td>
+                    <td>@doctorRank.Name</td>
+                    <td>@doctorRank.Surname</td>
+                    <td>@doctorRank.specializations.First().Name  </td>
+                    <td>@doctorRank.places.First().City </td>
+                    <td>
+                        <form method="get" asp-action="ShowComments" asp-controller="Comment">
+                            <input type="hidden" name="UserId" value="@doctorRank.UserId" />
+                          
+                            <button class="btn btn-dark" type="submit">@doctorRank.comments.Where(x=>x.Text!="Brak").Count()</button>
+                        </form>
+                    
+                    
+                    </td>
+                    <td>@doctorRank.NearestAppoitmentDate</td>
+                    <td>
+                        <form method="get" asp-action="ShowAppointments" asp-controller="Appointment">
+                            <input type="hidden" name="DoctorId" value="@doctorRank.UserId" />
+                            <input type="hidden" name="Country" value="" />
+                            <input type="hidden" name="City" value="" />
+                            <button class="btn btn-dark" type="submit">@doctorRank.NearestAppoitmentDate</button>
+                        </form>
+                    </td>
+
+                </tr>
                 }
             </tbody>
 
