--- a/PogotowieCom/Views/Home/HomePage.cshtml
+++ b/PogotowieCom/Views/Home/HomePage.cshtml
@@ -22,6 +22,9 @@
         <div class="col-lg-3 ">
             <a asp-action="AdvancedSearch" class="btn btn-warning">Szukanie Zaawansowane</a>
         </div>
+        <div class="col-lg-3 ">
+            <a asp-action="DoctorRank" asp-controller="Comment" class="btn btn-warning">Ranking Lekarzy</a>
+        </div>
 
     </div>
     <form id="SelectDoctor" asp-controller="Home" asp-action="FindSpecialist">
