--- a/PogotowieCom/Views/User/Settings.cshtml
+++ b/PogotowieCom/Views/User/Settings.cshtml
@@ -6,14 +6,14 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-12 text-center">
-            <h4>Ustawienia</h4>
+        <div class="col-lg-12 text-center bg-light">
+            <h1 class="text-dark">Ustawienia</h1>
         </div>
         
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <a asp-action="ManageSpecializations" class="btn btn-warning">Zarządzaj Specializacjami</a>
+            <a asp-action="ManageSpecializations" asp-controller="User" class="btn btn-warning"    >Zarządzaj Specializacjami</a>
         </div>
     </div>
 </div>
