--- a/PogotowieCom/Views/Home/HomePage.cshtml
+++ b/PogotowieCom/Views/Home/HomePage.cshtml
@@ -6,26 +6,27 @@
 
 
 
-<div>@DateTime.Now</div>
+
 
 <div class="container">
-    <div class="row">
-        <div class="col-lg-3 ">
-
-        </div>
-        <div class="col-lg-3 ">
-
-        </div>
-        <div class="col-lg-3 ">
+    <div class="row">     
+        <div class="col-lg-9">
 
         </div>
         <div class="col-lg-3 ">
             <a asp-action="AdvancedSearch" class="btn btn-warning">Szukanie Zaawansowane</a>
+        </div>       
+    </div>
+    <div class="row">
+        <div class="col-lg-12"><br /></div>
+    </div>
+    <div class="row">
+        <div class="col-lg-9">
+
         </div>
         <div class="col-lg-3 ">
-            <a asp-action="DoctorRank" asp-controller="Comment" class="btn btn-warning">Ranking Lekarzy</a>
+            <a asp-action="DoctorRank" asp-controller="Comment" class="btn btn-success">Ranking Lekarzy</a>
         </div>
-
     </div>
     <form id="SelectDoctor" asp-controller="Home" asp-action="FindSpecialist">
         <div class="row">
