--- a/PogotowieCom/Views/Home/UsersPanel.cshtml
+++ b/PogotowieCom/Views/Home/UsersPanel.cshtml
@@ -16,13 +16,17 @@
 
 
 <h1>Moje Konto</h1>
-
+    <div class="row">
+        <div class="col-lg-12">
+            <br />
+        </div>
+    </div>
     <div class="row">
         <h2>Powiadomienia</h2>
     </div>
     <div class="row">
 
-        @if (Model.NotificationList.Count > 0)
+        @if (Model.NotificationList!=null&&Model.NotificationList.Count > 0)
         {
             foreach (var item in Model.NotificationList)
             {
