--- a/PogotowieCom/Views/Home/AdvancedSearch.cshtml
+++ b/PogotowieCom/Views/Home/AdvancedSearch.cshtml
@@ -4,9 +4,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AdvancedSearch</h2>
+
 
 <div class="container">
+    <div class="row">
+        <div class="col-lg-12 text-center bg-light">
+            <h2>Szukanie zaawansowane</h2>
+        </div>
+    </div>
     <div class="row">
         <form asp-controller="Home" asp-action="AdvancedSearch">
 
