--- a/PogotowieCom/Views/Comment/ShowComments.cshtml
+++ b/PogotowieCom/Views/Comment/ShowComments.cshtml
@@ -9,7 +9,11 @@
 @if(Model.Comments!=null&&Model.Comments.Count()>0)
 {
 <div class="container">
-    <h2 class="bg-light text-center">Komentarze doktora @Model.user.UserName     @Model.user.Surname</h2>
+    <div class="col-lg-12">
+        <h2 class="bg-light text-center">Komentarze doktora @Model.user.UserName     @Model.user.Surname</h2>
+    </div>
+    <br />
+   
  
     @foreach (var comment in Model.Comments)
     {
@@ -22,7 +26,8 @@
                 <p>@comment.Text</p>
             </div>
         </div>
-
+        <br />
+      
     }
 
 </div>
