--- a/PogotowieCom/Views/Home/HomePage.cshtml
+++ b/PogotowieCom/Views/Home/HomePage.cshtml
@@ -48,21 +48,7 @@
                 <input asp-for="MedicalSpecialist" class="form-control">
             </div>
         </div>
-        @*<div class="row">
-                <h3>Powiedz co Ci dolega</h3>
-
-                @for (int i = 0; i < 5; i++)
-                {
-                    <div class="col-lg-12 form-group ">
-                        <label>Objaw @(i + 1)</label>
-
-                        <input name="Ailments[@i].Text" class="form-control">
-                    </div>
-                }
-
-
-
-            </div>*@
+      
 
         <div class=" form-group">
             <h3>Powiedz co Ci dolega</h3>
@@ -98,11 +84,19 @@
         </div>
     </form>
 
-
-
-    <div class="row" id="FindSpecialist">
-
+    <div class="row">
+        <div class="col col-lg-12">
+            <br />
+        </div>
     </div>
+
+
+    <div class="row">
+        <div class="col-lg-12" id="FindSpecialist">
+
+        </div>
+    </div>
+   
 
 
 
